--- a/toybox.config
+++ b/toybox.config
@@ -23,9 +23,9 @@ CONFIG_DATE=y
 CONFIG_DD=y
 # CONFIG_DF is not set
 CONFIG_DIRNAME=y
-# CONFIG_DU is not set
+CONFIG_DU=y
 CONFIG_ECHO=y
-# CONFIG_ENV is not set
+CONFIG_ENV=y
 # CONFIG_EXPAND is not set
 # CONFIG_FALSE is not set
 CONFIG_FILE=y
@@ -37,7 +37,7 @@ CONFIG_EGREP=y
 CONFIG_FGREP=y
 CONFIG_HEAD=y
 # CONFIG_ICONV is not set
-# CONFIG_ID is not set
+CONFIG_ID=y
 # CONFIG_ID_Z is not set
 # CONFIG_GROUPS is not set
 # CONFIG_LOGNAME is not set
@@ -71,7 +71,7 @@ CONFIG_RMDIR=y
 CONFIG_SED=y
 CONFIG_SLEEP=y
 CONFIG_SORT=y
-# CONFIG_SORT_FLOAT is not set
+CONFIG_SORT_FLOAT=y
 # CONFIG_SPLIT is not set
 # CONFIG_STRINGS is not set
 CONFIG_TAIL=y
@@ -184,7 +184,7 @@ CONFIG_TR=y
 # CONFIG_ACPI is not set
 # CONFIG_ASCII is not set
 # CONFIG_UNICODE is not set
-# CONFIG_BASE64 is not set
+CONFIG_BASE64=y
 # CONFIG_BASE32 is not set
 # CONFIG_BLKDISCARD is not set
 # CONFIG_BLKID is not set
@@ -254,7 +254,7 @@ CONFIG_TR=y
 # CONFIG_PARTPROBE is not set
 # CONFIG_PIVOT_ROOT is not set
 # CONFIG_PMAP is not set
-# CONFIG_PRINTENV is not set
+CONFIG_PRINTENV=y
 # CONFIG_PWDX is not set
 # CONFIG_PWGEN is not set
 # CONFIG_READAHEAD is not set
@@ -271,7 +271,7 @@ CONFIG_READLINK=y
 # CONFIG_SHA3SUM is not set
 # CONFIG_SHRED is not set
 # CONFIG_SHUF is not set
-# CONFIG_STAT is not set
+CONFIG_STAT=y
 # CONFIG_SWAPOFF is not set
 # CONFIG_SWAPON is not set
 # CONFIG_SWITCH_ROOT is not set
@@ -279,8 +279,8 @@ CONFIG_READLINK=y
 # CONFIG_TAC is not set
 CONFIG_NPROC=y
 # CONFIG_TASKSET is not set
-# CONFIG_TIMEOUT is not set
-# CONFIG_TRUNCATE is not set
+CONFIG_TIMEOUT=y
+CONFIG_TRUNCATE=y
 # CONFIG_TS is not set
 # CONFIG_UCLAMPSET is not set
 # CONFIG_UPTIME is not set
@@ -291,9 +291,9 @@ CONFIG_NPROC=y
 # CONFIG_W is not set
 # CONFIG_WATCH is not set
 # CONFIG_WATCHDOG is not set
-# CONFIG_WHICH is not set
-# CONFIG_XXD is not set
-# CONFIG_YES is not set
+CONFIG_WHICH=y
+CONFIG_XXD=y
+CONFIG_YES=y
 
 #
 # Networking commands
@@ -310,7 +310,7 @@ CONFIG_NPROC=y
 # CONFIG_RFKILL is not set
 # CONFIG_SNTP is not set
 # CONFIG_TUNCTL is not set
-# CONFIG_WGET is not set
+CONFIG_WGET=y
 # CONFIG_WGET_LIBTLS is not set
 
 #
@@ -323,8 +323,8 @@ CONFIG_ZCAT=y
 CONFIG_HOSTNAME=y
 # CONFIG_DNSDOMAINNAME is not set
 # CONFIG_KILLALL is not set
-# CONFIG_MD5SUM is not set
-# CONFIG_SHA1SUM is not set
+CONFIG_MD5SUM=y
+CONFIG_SHA1SUM=y
 # CONFIG_SHA224SUM is not set
 # CONFIG_SHA256SUM is not set
 # CONFIG_SHA384SUM is not set
@@ -336,7 +336,7 @@ CONFIG_MKTEMP=y
 # CONFIG_PASSWD is not set
 # CONFIG_PASSWD_SAD is not set
 # CONFIG_PIDOF is not set
-# CONFIG_SEQ is not set
+CONFIG_SEQ=y
 # CONFIG_SU is not set
 # CONFIG_SYNC is not set
 # CONFIG_UMOUNT is not set
