--- a/toybox.config
+++ b/toybox.config
@@ -176,7 +176,7 @@ CONFIG_TR=y
 # CONFIG_USERADD is not set
 # CONFIG_USERDEL is not set
 # CONFIG_VI is not set
-# CONFIG_XZCAT is not set
+CONFIG_XZCAT=y
 
 #
 # Other commands
@@ -190,8 +190,8 @@ CONFIG_BASE64=y
 # CONFIG_BLKID is not set
 # CONFIG_FSTYPE is not set
 # CONFIG_BLOCKDEV is not set
-# CONFIG_BUNZIP2 is not set
-# CONFIG_BZCAT is not set
+CONFIG_BUNZIP2=y
+CONFIG_BZCAT=y
 # CONFIG_CHCON is not set
 # CONFIG_CHROOT is not set
 # CONFIG_CHRT is not set
