--- a/test/Makefile
+++ b/test/Makefile
@@ -7,4 +7,8 @@ sabotage: FORCE
 	docker build .. -f Dockerfile.sabotage -t sabotage
 	docker run --rm -it sabotage /bin/sh
 
+run:
+	docker build .. -t bootsh
+	docker run --rm -it bootsh /bin/sh
+
 FORCE:
