--- a/toybox.config
+++ b/toybox.config
@@ -83,7 +83,7 @@ CONFIG_TEE=y
 CONFIG_TOUCH=y
 # CONFIG_TRUE is not set
 # CONFIG_TSORT is not set
-# CONFIG_TTY is not set
+CONFIG_TTY=y
 # CONFIG_ULIMIT is not set
 CONFIG_ARCH=y
 CONFIG_UNAME=y
