--- a/toybox.config
+++ b/toybox.config
@@ -325,10 +325,10 @@ CONFIG_HOSTNAME=y
 # CONFIG_KILLALL is not set
 CONFIG_MD5SUM=y
 CONFIG_SHA1SUM=y
-# CONFIG_SHA224SUM is not set
-# CONFIG_SHA256SUM is not set
-# CONFIG_SHA384SUM is not set
-# CONFIG_SHA512SUM is not set
+CONFIG_SHA224SUM=y
+CONFIG_SHA256SUM=y
+CONFIG_SHA384SUM=y
+CONFIG_SHA512SUM=y
 # CONFIG_MKNOD is not set
 # CONFIG_MKNOD_Z is not set
 CONFIG_MKTEMP=y
