--- a/test/Makefile
+++ b/test/Makefile
@@ -1,3 +1,10 @@
+all:
+	docker build .. -t bootsh
+	docker run --rm \
+		-v $(CURDIR)/../test/cc:/root/test/cc \
+		-v $(CURDIR)/../lib/toybox:/root/lib/toybox \
+		bootsh test-host
+
 bootstrap:
 	docker build .. -t bootsh
 	docker build .. -f Dockerfile.bootstrap
