--- a/root/Makefile
+++ b/root/Makefile
@@ -2,6 +2,8 @@ ARCH = $(shell uname -m)
 NPROC = $(shell nproc)
 MAKEFLAGS += -j$(NPROC)
 
+.PHONY: gawk binutils bzip2 linux-headers bash muxzcat perl bearssl curl test-host sabotage-stage0 sabotage-stage1 sabotage
+
 gawk-5.3.0.tar.xz:
 	@echo "Downloading gawk source code..."
 	wget http://ftp.gnu.org/gnu/gawk/gawk-5.3.0.tar.xz
@@ -9,9 +11,11 @@ gawk-5.3.0.tar.xz:
 gawk-5.3.0: gawk-5.3.0.tar.xz
 	tar -xf $<
 
-gawk: gawk-5.3.0
+/usr/local/bin/gawk: gawk-5.3.0
 	cd $< && ./configure --disable-shared LD=cc && $(MAKE) && $(MAKE) install
 	ln -sf /usr/local/bin/gawk /usr/local/bin/awk
+
+gawk: /usr/local/bin/gawk
 
 binutils-2.27.tar.bz2:
 	@echo "Downloading binutils source code..."
@@ -20,9 +24,11 @@ binutils-2.27.tar.bz2:
 binutils-2.27: binutils-2.27.tar.bz2
 	tar -xf $<
 
-binutils: binutils-2.27
+/usr/local/bin/ar: binutils-2.27
 	cd $< && ./configure --disable-gprofng CFLAGS=-D__LITTLE_ENDIAN__=1 && \
 		$(MAKE) MAKEINFO=true && $(MAKE) MAKEINFO=true install
+
+binutils: /usr/local/bin/ar
 
 bzip2-1.0.8.tar.gz:
 	@echo "Downloading bzip2 source code..."
@@ -41,8 +47,10 @@ linux-headers-4.19.88.tar.xz:
 linux-headers-4.19.88: linux-headers-4.19.88.tar.xz
 	tar -xf $<
 
-linux-headers: linux-headers-4.19.88
+/usr/local/include/linux: linux-headers-4.19.88
 	cd $< && $(MAKE) install ARCH=$(shell uname -m)
+
+linux-headers: /usr/local/include/linux
 
 bash-5.2.21.tar.gz:
 	@echo "Downloading bash source code..."
@@ -66,9 +74,11 @@ perl-5.38.2.tar.xz:
 perl-5.38.2: perl-5.38.2.tar.xz
 	tar -xf $<
 
-perl: perl-5.38.2
+/usr/local/bin/perl: perl-5.38.2
 	cd $< && ./Configure -des -Uusenm -Uusedl -DEBUGGING=both && \
 		$(MAKE) && $(MAKE) install
+
+perl: /usr/local/bin/perl
 
 bearssl-0.6.tar.gz:
 	@echo "Downloading bearssl source code..."
@@ -77,9 +87,11 @@ bearssl-0.6.tar.gz:
 bearssl-0.6: bearssl-0.6.tar.gz
 	tar -xf $<
 
-bearssl: bearssl-0.6
+/usr/local/lib/libbearssl.a: bearssl-0.6
 	cd $< && $(MAKE) && mkdir -p /usr/local/lib /usr/local/include && \
 		cp -f build/libbearssl.a /usr/local/lib/ && cp -f inc/*.h /usr/local/include/
+
+bearssl: /usr/local/lib/libbearssl.a
 
 curl-8.0.1.tar.xz:
 	@echo "Downloading curl source code..."
@@ -88,22 +100,24 @@ curl-8.0.1.tar.xz:
 curl-8.0.1: curl-8.0.1.tar.xz
 	tar -xf $<
 
-curl: curl-8.0.1 bearssl perl
+/usr/local/bin/curl: curl-8.0.1 /usr/local/lib/libbearssl.a /usr/local/bin/perl
 	cd $< && ./configure --disable-shared --with-bearssl LD=cc && $(MAKE) && $(MAKE) install
+
+curl: /usr/local/bin/curl
 
 test-host: bash
 	cd test/cc && $(MAKE) && $(MAKE) clean
-	cd lib/toybox && TEST_HOST=1 USER=root scripts/test.sh
+	cd lib/toybox && TEST_HOST=1 USER=root scripts/test.sh && rm -rf generated/testdir
 	@echo "All tests passed!"
 
-sabotage-%.tar.gz: curl
+sabotage-%.tar.gz: /usr/local/bin/curl
 	@echo "Downloading sabotage source code..."
 	curl -Lk https://github.com/sabotage-linux/sabotage/archive/$*.tar.gz > $@
 
 sabotage-%: sabotage-%.tar.gz
 	tar -xf $<
 
-sabotage-stage0: sabotage-c7a8f2051c17501a6bfef1d8a0a3fc9ab6103761 gawk binutils bzip2 linux-headers curl
+sabotage-stage0: sabotage-c7a8f2051c17501a6bfef1d8a0a3fc9ab6103761 /usr/local/bin/gawk /usr/local/bin/ar /usr/local/bin/bzip2 /usr/local/bin/curl /usr/local/include/linux
 	mkdir -p /sabotage
 	mv -f $< /sabotage/src
 	cd /sabotage/src && \
